# bench-compression-algorithms

./: Cargo.toml  README.md
benches/: pov.rs
benches/wasm/: kusama_runtime.compact.wasm  polkadot_runtime.compact.wasm  rococo_runtime.compact.wasm
