[package]
name = "bench-compression-algorithms"
version = "0.1.0"
authors = ["we"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "1.3.6", features = ["derive"] }

[dev-dependencies]
criterion = "0.3.3"

flate2 = { version = "1.0.19", features = ["zlib"], default-features = false }
lz4 = "1.23.2"
zstd = "0.6.0"
ruzstd = "0.2.2"

[[bench]]
name = "pov"
harness = false
